@@ -2,6 +2,7 @@
 
 use strict;
 use Hijk;
+use Time::HiRes ();
 
 use Test::More;
 use Test::Exception;
@@ -35,6 +36,26 @@ subtest "without timeout, do not expect an exception." => sub {
     lives_ok {
         my $res = Hijk::request({%args, timeout => 0});
     } 'google.com send back something without timeout';
+};
+
+subtest "Test the on_connect callback" => sub {
+    lives_ok {
+        my $connect_time = -Time::HiRes::time();
+        my $read_time;
+        my $res = Hijk::request({
+            %args,
+            timeout => 10,
+            socket_cache => undef,
+            on_connect => sub {
+                $connect_time += Time::HiRes::time();
+                $read_time = -Time::HiRes::time();
+                return;
+            },
+        });
+        $read_time += Time::HiRes::time();
+        ok($connect_time, "Managed to connect in $connect_time");
+        ok($read_time, "Managed to read in $read_time");
+    };
 };
 
 done_testing;
